--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,14 @@
 ################################################################################
 
 # Folders to ignore - files may be too large, too many, etc. NOTE: EDIT IF NEEDED.
-data
+#data
 videos
 plots
 notebooks
 _research
+*.nc
+*.log
+*.out
 
 ################################################################################
 #                                    Julia                                     #
